# toru

./: Cargo.toml  README.md
dev-notes/: data invariants.md
src/: args.rs  colour.rs  config.rs  edit.rs  error.rs  format.rs  git.rs  graph.rs  index.rs  list.rs  main.rs  state.rs  stats.rs  tasks.rs  vault.rs  vcs.rs
