[package]
name = "toru"
version = "0.2.0"
edition = "2021"
authors = ["Aaron Manning <contact@aaronmanning.net>"]
license = "GPL-2.0-only"
description = "A command line task manager."
repository = "https://github.com/aaron-jack-manning/toru"

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.17", features = ["derive"] }
colored = "2.0.0"
comfy-table = "6.0.0"
confy = "0.4.0"
petgraph = { version = "0.6.2", features = ["serde_derive", "serde", "serde-1"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_with = "2.0.0"
termsize = "0.1.6"
toml = "0.5.9"
trash = "2.1.5"
